hphp/hack/test/typecheck/global_const13.php
<?hh // partial

const X = $x is A;
